--- a/server/conf.yaml
+++ b/server/conf.yaml
@@ -5,10 +5,16 @@ ldcs:
 network_elements:
   "10.6.2.254":
     "ifOutOctets.1": 1
+    "ifOutOctets.2": 1
+    "ifOutOctets.3": 1
     "status": 1
   "10.6.1.254":
     "ifOutOctets.1": 2
+    "ifOutOctets.2": 1
+    "ifOutOctets.3": 1
   "10.6.2.201":
+    "status": 1
+  "10.6.2.216":
     "status": 1
 fetch_interval: 1
 reassign_interval: 5
